<?xml version="1.0"?>
<package>
  <name>twitter_api</name>
  <version>0.0.0</version>
  <description>The twitter_api package</description>

  <maintainer email="robpin@cartif.es">Roberto Pinillos</maintainer>

  <license>MIT</license>


  <author email="robpin@cartif.es">Roberto Pinillos</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>strands-twython</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>strands-twython</run_depend>

  <export>

  </export>
</package>
